--- a/CalculadoraServidor_Multi/nbproject/project.properties
+++ b/CalculadoraServidor_Multi/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=CalculadoraServidor_Multi
+application.title=Multiplicar
 application.vendor=Hp
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CalculadoraServidor_Multi.jar
+dist.jar=${dist.dir}/Multiplicar.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CalculadoraServidor_Multi
+dist.jlink.output=${dist.jlink.dir}/Multiplicar
 endorsed.classpath=
 excludes=
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CalculadoraServidor_Multi
+jlink.launcher.name=Multiplicar
 main.class=calculadoraservidor.CalculadoraServidor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
