--- a/CalculadoraServidor_Suma/build.xml
+++ b/CalculadoraServidor_Suma/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="CalculadoraServidor_Suma" default="default" basedir=".">
-    <description>Builds, tests, and runs the project CalculadoraServidor_Suma.</description>
+<project name="Sumar" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Sumar.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="CalculadoraServidor_Suma-impl.jar">
+        <target name="run" depends="Sumar-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
