--- a/CalculadoraServidor_Suma/nbproject/project.properties
+++ b/CalculadoraServidor_Suma/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=CalculadoraServidor_Suma
+application.title=Sumar
 application.vendor=Hp
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CalculadoraServidor_Suma.jar
+dist.jar=${dist.dir}/Sumar.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CalculadoraServidor_Suma
+dist.jlink.output=${dist.jlink.dir}/Sumar
 endorsed.classpath=
 excludes=
 includes=**
@@ -72,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CalculadoraServidor_Suma
-main.class=calculadoraservidor.CalculadoraServidor
+jlink.launcher.name=Sumar
+main.class=calculadoraservidorSuma.CalculadoraServidorSuma
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
